--- a/index.html
+++ b/index.html
@@ -25,45 +25,39 @@
     h1 { font-size: 24px; margin: 0 0 4px 0; color: #7c3aed; font-weight: 800; }
     .intro { color: #9ca3af; font-size: 12px; margin-bottom: 10px; line-height: 1.3; font-weight: 500; }
     .card { border-radius: 16px; padding: 16px; margin: 8px 0; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04); background: white; }
-
     .category-tabs { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
     .tab-button { padding: 10px 14px; border: 2px solid #f3f4f6; border-radius: 14px; background: #f9fafb; color: #9ca3af; cursor: pointer; font-size: 13px; font-weight: 700; transition: all 0.2s; }
     .tab-button:hover { background: #f3f4f6; }
     .tab-button.active { background: #7c3aed; color: white; border-color: #7c3aed; box-shadow: 0 2px 8px rgba(124, 58, 237, 0.2); }
-
     .sub-filters { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 8px; padding: 10px; background: #f9fafb; border-radius: 10px; }
     .filter-chip { padding: 5px 10px; border-radius: 14px; background: white; border: 2px solid #e5e7eb; color: #6b7280; cursor: pointer; font-size: 12px; font-weight: 600; transition: all 0.2s; }
     .filter-chip:hover { background: #f9fafb; }
     .filter-chip.active { background: #7c3aed; color: white; border-color: #7c3aed; }
-
     .badge { display: inline-block; background: #7c3aed; color: white; padding: 5px 10px; border-radius: 10px; font-size: 11px; font-weight: 800; margin-bottom: 5px; }
     .context-box { background: #f9fafb; border-radius: 8px; padding: 6px 10px; margin-bottom: 10px; font-size: 12px; color: #6b7280; font-weight: 600; }
-
     .korean-section { background: #f9fafb; border-radius: 14px; padding: 16px 12px; margin: 8px 0; }
     .target-display { font-size: 28px; font-weight: 900; color: #1f2937; text-align: center; line-height: 1.2; margin-bottom: 6px; }
     .english-translation { color: #6b7280; font-size: 16px; text-align: center; margin-bottom: 10px; font-weight: 600; }
     .pronunciation-hint { color: #9ca3af; font-size: 13px; font-weight: 600; text-align: center; letter-spacing: 0.3px; margin-bottom: 0; font-style: italic; }
-
+    .pronunciation-section { display: none; }
     button { padding: 12px 18px; border: 0; border-radius: 14px; background: #7c3aed; color: white; cursor: pointer; font-size: 15px; font-weight: 800; width: 100%; box-shadow: 0 2px 8px rgba(124, 58, 237, 0.2); transition: all 0.2s; }
     button:hover { background: #6d28d9; box-shadow: 0 4px 12px rgba(124, 58, 237, 0.25); }
     button:disabled { opacity: 0.4; cursor: not-allowed; }
     button.secondary { background: #f9fafb; color: #6b7280; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
     button.secondary:hover { background: #f3f4f6; }
     .button-group { display: grid; grid-template-columns: 1fr 1fr; gap: 6px; margin-top: 8px; }
-
+    .practice-tip { background: #fffbeb; border-left: 3px solid #f59e0b; padding: 8px 12px; border-radius: 10px; margin-top: 8px; font-size: 12px; color: #92400e; line-height: 1.4; font-weight: 500; }
     .repetition-tracker { margin: 8px 0; padding: 10px; background: #f9fafb; border-radius: 10px; }
     .repetition-label { font-size: 12px; font-weight: 600; color: #6b7280; margin-bottom: 8px; text-align: center; }
     .repetition-dots { display: flex; gap: 5px; justify-content: center; margin-bottom: 8px; }
     .rep-dot { width: 32px; height: 32px; border-radius: 50%; border: 2px solid #e5e7eb; background: white; display: flex; align-items: center; justify-content: center; font-size: 14px; transition: all 0.3s; }
     .rep-dot.completed { background: #7c3aed; border-color: #7c3aed; transform: scale(1.1); }
-
     .congratulations { background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); padding: 12px; border-radius: 10px; text-align: center; margin: 8px 0; display: none; animation: slideIn 0.5s ease-out; }
     .congratulations.show { display: block; }
     .congratulations-emoji { font-size: 36px; margin-bottom: 4px; }
     .congratulations-text { font-size: 16px; font-weight: 800; color: #92400e; margin-bottom: 2px; }
     .congratulations-subtext { font-size: 12px; color: #92400e; font-weight: 600; }
     @keyframes slideIn { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
-
     .progress { text-align: center; color: #7c3aed; font-size: 13px; font-weight: 700; margin-top: 8px; }
     .voice-speed { display: flex; align-items: center; justify-content: center; gap: 8px; margin-top: 8px; padding: 8px; background: #f9fafb; border-radius: 8px; }
     .voice-speed label { color: #7c3aed; font-size: 12px; font-weight: 600; }
@@ -74,33 +68,20 @@
     .voice-speed input[type="range"]::-moz-range-thumb { width: 16px; height: 16px; background: #7c3aed; border: none; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
     .voice-speed input[type="range"]::-moz-range-thumb:hover { background: #6d28d9; transform: scale(1.1); }
     .voice-speed span { color: #7c3aed; font-weight: 700; font-size: 12px; min-width: 45px; }
-
     .error-msg { background: #fee2e2; color: #991b1b; padding: 8px 12px; border-radius: 8px; margin-top: 8px; font-size: 11px; font-weight: 600; display: none; }
 
-    @media (max-width: 640px) { body { padding: 12px; } h1 { font-size: 24px; } .card { padding: 16px; } .target-display { font-size: 28px; } .pronunciation-hint { font-size: 15px; } .category-tabs { grid-template-columns: 1fr; } }
-
-    /* Header and Auth */
+    /* Auth UI (modal is optional, guarded in JS) */
     .auth-section { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.6); align-items: center; justify-content: center; z-index: 9999; padding: 20px; }
+    .auth-section.hidden { display: none; }
     .auth-section:not(.hidden) { display: flex; }
-    .header-container { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; position: relative; z-index: 1; }
-    .header-left { flex: 1; }
-    .header-right { display: flex; gap: 8px; }
-
-    .login-btn { background: #7c3aed; color: white; border: none; padding: 8px 16px; border-radius: 12px; font-size: 13px; font-weight: 700; cursor: pointer; transition: all 0.2s; }
-    .login-btn:hover { background: #6d28d9; }
-    .my-btn { background: #f9fafb; color: #6b7280; border: 2px solid #e5e7eb; padding: 8px 16px; border-radius: 12px; font-size: 13px; font-weight: 700; cursor: pointer; transition: all 0.2s; }
-    .my-btn:hover { background: #f3f4f6; }
-
     .auth-card { background: white; padding: 40px; border-radius: 24px; text-align: center; max-width: 400px; width: 100%; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); position: relative; pointer-events: auto; }
     .auth-close { position: absolute; top: 16px; right: 16px; background: none; border: none; font-size: 28px; color: #9ca3af; cursor: pointer; width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; border-radius: 8px; line-height: 1; padding: 0; }
     .auth-close:hover { background: #f3f4f6; color: #6b7280; }
     .auth-title { font-size: 28px; font-weight: 800; color: #7c3aed; margin-bottom: 8px; }
     .auth-subtitle { font-size: 14px; color: #9ca3af; margin-bottom: 24px; }
     .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 14px 24px; border-radius: 12px; font-size: 16px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); pointer-events: auto; user-select: none; }
-    .google-login-btn svg { pointer-events: none; }
     .google-login-btn:hover { background: #f9fafb; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transform: translateY(-1px); }
     .google-login-btn:active { transform: translateY(0); background: #f3f4f6; }
-
     .user-profile { display: flex; align-items: center; gap: 8px; padding: 6px 12px; background: white; border-radius: 12px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); }
     .user-avatar { width: 32px; height: 32px; border-radius: 50%; border: 2px solid #7c3aed; }
     .user-info { flex: 1; text-align: left; }
@@ -112,57 +93,67 @@
     .stat-item { background: #f9fafb; padding: 10px; border-radius: 10px; text-align: center; }
     .stat-value { font-size: 18px; font-weight: 800; color: #7c3aed; }
     .stat-label { font-size: 10px; color: #6b7280; font-weight: 600; margin-top: 3px; }
+
+    @media (max-width: 640px) {
+      body { padding: 12px; }
+      h1 { font-size: 24px; }
+      .card { padding: 16px; }
+      .target-display { font-size: 28px; }
+      .pronunciation-hint { font-size: 15px; }
+      .category-tabs { grid-template-columns: 1fr; }
+    }
   </style>
 </head>
 <body>
   <!-- Header -->
-  <div class="header-container">
+  <div class="header-container" style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;">
     <div class="header-left">
       <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
-      <div class="intro">Master Korean with K-Drama lines and daily conversations 💕</div>
+      <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
     </div>
     <div class="header-right">
-      <button id="loginBtn" class="login-btn" onclick="window.SoriAuth.handleLogin()">Login</button>
-      <button id="myBtn" class="my-btn" onclick="window.SoriAuth.handleMy()">My</button>
+      <button id="loginBtn" class="login-btn" onclick="handleGoogleLogin()">Login</button>
+      <button id="myBtn" class="my-btn" onclick="handleMyButton()">My</button>
     </div>
   </div>
 
-  <!-- User Mini Section -->
+  <!-- Optional User mini section -->
   <div id="userSection" style="display:none; margin-bottom:8px;">
     <div class="user-profile">
-      <img id="userAvatar" class="user-avatar" src="" alt="avatar" />
+      <img id="userAvatar" class="user-avatar" alt="avatar" />
       <div class="user-info">
-        <div class="user-name" id="userName">User</div>
-        <div class="user-level" id="userLevel">Level 1</div>
+        <div id="userName" class="user-name">User</div>
+        <div id="userLevel" class="user-level">Level 1 - Beginner</div>
       </div>
       <button id="logoutBtn" class="logout-btn">Logout</button>
     </div>
-
     <div class="stats-card">
       <div class="stat-item">
-        <div class="stat-value" id="totalDays">0</div>
+        <div id="totalDays" class="stat-value">0</div>
         <div class="stat-label">Days</div>
       </div>
       <div class="stat-item">
-        <div class="stat-value" id="streak">0</div>
+        <div id="streak" class="stat-value">0</div>
         <div class="stat-label">Streak</div>
       </div>
       <div class="stat-item">
-        <div class="stat-value" id="xpPoints">0</div>
+        <div id="xpPoints" class="stat-value">0</div>
         <div class="stat-label">XP</div>
       </div>
     </div>
   </div>
 
+  <!-- Category -->
   <div class="card">
     <div class="category-tabs">
-      <button class="tab-button active" id="dailyBtn">💬 Daily</button>
-      <button class="tab-button" id="travelBtn">✈️ Travel</button>
-      <button class="tab-button" id="dramaBtn">🎭 K-Drama</button>
+      <button class="tab-button active" id="dailyBtn">Daily</button>
+      <button class="tab-button" id="travelBtn">Travel</button>
+      <button class="tab-button" id="dramaBtn">K-Drama</button>
     </div>
     <div id="subFilters" style="display:none;"></div>
   </div>
 
+  <!-- Main content -->
   <div class="card">
     <div class="badge" id="badge">Greeting</div>
     <div class="context-box" id="context">Conversation: First meeting</div>
@@ -174,7 +165,7 @@
     </div>
 
     <div class="repetition-tracker">
-      <div class="repetition-label">🎯 Practice Count: <span id="repCount">0</span> / 5</div>
+      <div class="repetition-label">Practice Count: <span id="repCount">0</span> / 5</div>
       <div class="repetition-dots" id="repDots">
         <div class="rep-dot" id="dot1"></div>
         <div class="rep-dot" id="dot2"></div>
@@ -190,7 +181,7 @@
       <div class="congratulations-subtext">Great job! Ready for the next one?</div>
     </div>
 
-    <button id="playBtn">🔊 Listen & Repeat</button>
+    <button id="playBtn">Listen & Repeat</button>
     <div class="error-msg" id="errorMsg"></div>
 
     <div class="voice-speed">
@@ -200,7 +191,7 @@
     </div>
 
     <div class="practice-tip">
-      💡 <strong>Tip:</strong> Listen carefully and repeat multiple times. Consistency is key!
+      Tip: Listen carefully and repeat multiple times. Consistency is key.
     </div>
   </div>
 
@@ -212,20 +203,28 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- Data scripts -->
-  <script src="data/daily.js" defer></script>
-  <script src="data/drama.js" defer></script>
-  <script src="data/travel.js" defer></script>
-  <script src="data/dataindex.js" defer></script>
+  <!-- Optional Auth Modal (shown if not configured) -->
+  <div id="authModal" class="auth-section hidden">
+    <div class="auth-card">
+      <button class="auth-close" onclick="document.getElementById('authModal').classList.add('hidden')">×</button>
+      <div class="auth-title">Sign in</div>
+      <div class="auth-subtitle">Save your streaks and XP</div>
+      <button class="google-login-btn" onclick="handleGoogleLogin()">
+        <svg width="18" height="18" viewBox="0 0 48 48"><path fill="#EA4335" d="M24 9.5c3.9 0 7 1.6 9.2 3.1l6.3-6.3C35.8 2.3 30.4 0 24 0 14.6 0 6.5 5.5 2.6 13.5l7.7 6c1.8-5.4 7-10 13.7-10z"/><path fill="#4285F4" d="M46.5 24.5c0-1.6-.1-2.8-.4-4.1H24v8h12.8c-.5 3-2.1 5.4-4.5 7.1l7 5.4c4.1-3.8 7.2-9.4 7.2-16.4z"/><path fill="#FBBC05" d="M10.4 28.1c-1-3-.9-6.3.1-9.1l-7.9-6.1C.9 16.2 0 19.9 0 24c0 4 1 7.7 2.7 11l7.7-6.1z"/><path fill="#34A853" d="M24 48c6.5 0 12-2.1 16-5.8l-7-5.4c-2 1.3-4.8 2.2-9 2.2-6.7 0-12.3-4.5-14.3-10.6l-7.7 6C6.5 42.5 14.6 48 24 48z"/></svg>
+        Continue with Google
+      </button>
+    </div>
+  </div>
 
-  <!-- Core scripts -->
-  <script src="js/state.js" defer></script>
-  <script src="js/tts.js" defer></script>
-  <script src="js/app.js" defer></script>
+  <!-- Load data first -->
+  <script src="./data/daily.js"></script>
+  <script src="./data/travel.js"></script>
+  <script src="./data/drama.js"></script>
+  <script src="./data/dataindex.js"></script>
 
-
+  <!-- Core logic -->
+  <script src="./js/state.js"></script>
+  <script src="./js/tts.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
-
-
-
