--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sori - Learn Korean</title>
 
-  <!-- Firebase (옵션: 실제 로그인 연동 시 사용) -->
+  <!-- Firebase -->
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -27,10 +27,12 @@
 
     .header-container { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; position: relative; z-index: 1; }
     .header-right { display:flex; gap:8px; }
-    .login-btn { background:#7c3aed; color:#fff; border:none; padding:8px 16px; border-radius:12px; font-size:13px; font-weight:700; cursor:pointer; transition:.2s; }
-    .login-btn:hover { background:#6d28d9; }
-    .my-btn { background:#f9fafb; color:#6b7280; border:2px solid #e5e7eb; padding:8px 16px; border-radius:12px; font-size:13px; font-weight:700; cursor:pointer; transition:.2s; }
-    .my-btn:hover { background:#f3f4f6; }
+
+    /* 작은 상단 버튼 */
+    .top-btn{ padding:6px 12px; border-radius:10px; font-size:12px; font-weight:700; cursor:pointer; border:0; }
+    .top-btn.primary{ background:#7c3aed; color:#fff; }
+    .top-btn:not(.primary){ background:#f9fafb; color:#6b7280; border:2px solid #e5e7eb; }
+    .top-btn:not(.primary):hover{ background:#f3f4f6; }
 
     .card { border-radius: 16px; padding: 16px; margin: 8px 0; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04); background: white; }
     .category-tabs { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
@@ -55,6 +57,10 @@
     button.secondary { background: #f9fafb; color: #6b7280; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
     button.secondary:hover { background: #f3f4f6; }
 
+    /* 스크랩 아이콘 버튼 */
+    .icon-btn{ border:none; background:#fff; color:#7c3aed; font-size:16px; width:32px; height:32px; border-radius:8px; cursor:pointer; }
+    .icon-btn.active{ color:#d97706; }
+
     .button-group { display: grid; grid-template-columns: 1fr 1fr; gap: 6px; margin-top: 8px; }
     .practice-tip { background: #fffbeb; border-left: 3px solid #f59e0b; padding: 8px 12px; border-radius: 10px; margin-top: 8px; font-size: 12px; color: #92400e; line-height: 1.4; font-weight: 500; }
     .repetition-tracker { margin: 8px 0; padding: 10px; background: #f9fafb; border-radius: 10px; }
@@ -72,9 +78,6 @@
     .voice-speed { display: flex; align-items: center; justify-content: center; gap: 8px; margin-top: 8px; padding: 8px; background: #f9fafb; border-radius: 8px; }
     .voice-speed label { color: #7c3aed; font-size: 12px; font-weight: 600; }
     .voice-speed input { width: 110px; cursor: pointer; }
-    .voice-speed input[type="range"] { -webkit-appearance: none; appearance: none; height: 5px; background: #e5e7eb; border-radius: 10px; outline: none; }
-    .voice-speed input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 16px; height: 16px; background: #7c3aed; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
-    .voice-speed input[type="range"]::-moz-range-thumb { width: 16px; height: 16px; background: #7c3aed; border: none; border-radius: 50%; cursor: pointer; transition: all 0.2s; }
     .voice-speed span { color: #7c3aed; font-weight: 700; font-size: 12px; min-width: 45px; }
     .error-msg { background: #fee2e2; color: #991b1b; padding: 8px 12px; border-radius: 8px; margin-top: 8px; font-size: 11px; font-weight: 600; display: none; }
 
@@ -87,7 +90,7 @@
       .category-tabs { grid-template-columns: 1fr; }
     }
 
-    /* === 로그인 모달 크기/클릭 수정 === */
+    /* 로그인 모달 */
     .auth-section { 
       display: none; position: fixed; inset: 0;
       background: rgba(0, 0, 0, 0.45);
@@ -95,40 +98,32 @@
       z-index: 9999; padding: 16px; pointer-events: auto;
     }
     .auth-section:not(.hidden){ display:flex; }
-
-    .auth-card{
-      max-width: 360px; width: 100%;
-      padding: 24px; border-radius: 18px;
-      background: white;
-      box-shadow: 0 18px 50px rgba(0,0,0,0.35);
-      position: relative; pointer-events: auto;
-      text-align: center;
-    }
+    .auth-card{ max-width: 360px; width: 100%; padding: 24px; border-radius: 18px; background: white; box-shadow: 0 18px 50px rgba(0,0,0,0.35); position: relative; pointer-events: auto; text-align: center; }
     .auth-close { position:absolute; top:10px; right:10px; background:none; border:none; font-size:22px; color:#9ca3af; cursor:pointer; width:32px; height:32px; border-radius:8px; line-height:1; }
     .auth-close:hover { background:#f3f4f6; color:#6b7280; }
     .auth-title { font-size: 24px; font-weight: 800; color: #7c3aed; margin-bottom: 6px; }
     .auth-subtitle { font-size: 13px; color: #9ca3af; margin-bottom: 18px; }
     .google-login-btn { background: white; border: 2px solid #e5e7eb; padding: 12px 16px; border-radius: 12px; font-size: 14px; font-weight: 600; color: #1f2937; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; gap: 12px; transition: all 0.2s; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.06); user-select: none; }
     .google-login-btn:hover { background:#f9fafb; }
-    .user-profile { display:none; } /* demo-safe */
-    .stats-card { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 6px; margin-bottom: 8px; }
-    .stat-item { background: #f9fafb; padding: 10px; border-radius: 10px; text-align: center; }
-    .stat-value { font-size: 18px; font-weight: 800; color: #7c3aed; }
-    .stat-label { font-size: 10px; color: #6b7280; font-weight: 600; margin-top: 3px; }
+
+    /* My 모달 */
+    .my-section{ display:none; position:fixed; inset:0; background:rgba(0,0,0,.45); align-items:center; justify-content:center; z-index:9999; padding:16px; }
+    .my-section:not(.hidden){ display:flex; }
+    .my-card{ max-width:560px; width:100%; padding:24px; border-radius:18px; background:#fff; box-shadow:0 18px 50px rgba(0,0,0,.35); position:relative; }
   </style>
 </head>
 <body>
   <!-- Header -->
-  <div class="header-container" style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;">
-  <div class="header-left">
-    <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
-    <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
+  <div class="header-container">
+    <div class="header-left">
+      <h1>Sori <span style="font-size: 14px; color: #9ca3af; font-weight: 600;">(beta)</span></h1>
+      <div class="intro">Master Korean with K-Drama lines and daily conversations</div>
+    </div>
+    <div class="header-right">
+      <button id="loginBtn" class="top-btn primary">Login</button>
+      <button id="myBtn" class="top-btn">My</button>
+    </div>
   </div>
-  <div class="header-right">
-    <button id="loginBtn" class="top-btn primary">Login</button>
-    <button id="myBtn" class="top-btn">My</button>
-  </div>
-</div>
 
   <div class="card">
     <div class="category-tabs">
@@ -140,7 +135,11 @@
   </div>
 
   <div class="card">
-    <div class="badge" id="badge">Greeting</div>
+    <div style="display:flex;justify-content:space-between;align-items:center;">
+      <div class="badge" id="badge">Greeting</div>
+      <!-- 스크랩 버튼 -->
+      <button id="scrapBtn" class="icon-btn" title="Save this phrase">☆</button>
+    </div>
     <div class="context-box" id="context">Conversation: First meeting</div>
 
     <div class="korean-section">
@@ -188,7 +187,7 @@
     <div class="progress" id="prog">1 / 30</div>
   </div>
 
-  <!-- 🔹 로그인 모달 -->
+  <!-- 로그인 모달 -->
   <div class="auth-section hidden" id="authModal">
     <div class="auth-card">
       <button class="auth-close" id="authClose" aria-label="Close">×</button>
@@ -206,29 +205,58 @@
     </div>
   </div>
 
-  <!-- 데이터 파일들 -->
+  <!-- My: 스크랩 모아보기 모달 -->
+  <div class="my-section hidden" id="myModal">
+    <div class="my-card">
+      <button class="auth-close" id="myCloseBtn" aria-label="Close">×</button>
+      <div class="auth-title">My Saved</div>
+      <div class="auth-subtitle">스크랩한 문구를 한 곳에서 볼 수 있어요.</div>
+      <div id="myList" style="text-align:left; max-height:60vh; overflow:auto;"></div>
+    </div>
+  </div>
+
+  <!-- 데이터 -->
   <script defer src="data/daily.js"></script>
   <script defer src="data/drama.js"></script>
   <script defer src="data/travel.js"></script>
   <script defer src="data/dataindex.js"></script>
 
-  <!-- 기능 파일들: state -> tts -> app 순서 필수 -->
+  <!-- 기능: state -> tts -> app -->
   <script defer src="js/state.js"></script>
   <script defer src="js/tts.js"></script>
   <script defer src="js/app.js"></script>
 
-  <!-- 모달 열기/닫기만 담당 -->
+  <!-- 헤더 버튼/모달 제어 -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      const modal = document.getElementById("authModal");
-      document.getElementById("loginBtn")?.addEventListener("click", () => {
-        modal?.classList.remove("hidden");
+      const authModal = document.getElementById("authModal");
+      const myModal = document.getElementById("myModal");
+
+      // Login 버튼: 로그인 상태에 따라 동작 (로그아웃/모달열기)
+      document.getElementById("loginBtn")?.addEventListener("click", async () => {
+        try {
+          const u = (window.firebase?.auth && firebase.auth().currentUser) || null;
+          if (u && window.SoriUser?.logout) {
+            await window.SoriUser.logout(); // 로컬/클라우드 동기화는 state.js에서 처리
+          } else {
+            authModal?.classList.remove("hidden");
+          }
+        } catch(e){ console.warn(e); }
       });
+
       document.getElementById("authClose")?.addEventListener("click", () => {
-        modal?.classList.add("hidden");
+        authModal?.classList.add("hidden");
+      });
+
+      // My 버튼: 스크랩 목록 모달
+      document.getElementById("myBtn")?.addEventListener("click", () => {
+        myModal?.classList.remove("hidden");
+        // 목록 자체 렌더는 app.js에서 클릭 시 채우도록 되어 있음
+      });
+      document.getElementById("myCloseBtn")?.addEventListener("click", () => {
+        myModal?.classList.add("hidden");
       });
     });
   </script>
 </body>
 </html>
-
